gccida/g2/emit_unrolled_add
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_unrolled_add/src/unroll.c:2808:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)dest_reg + 2), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_unrolled_add/src/obj/unroll.o] Error 1
